# find-myself

./: .gitignore  LICENSE  MODEL_LICENSE.md  README.md  app.py  manifest.json  package-lock.json  package.json  repair.command  requirements.txt  setup.command  start.command
.github/workflows/: release-desktop.yml  release-macos.yml
desktop/backend/: engine_cli.py  find_myself_backend.spec  requirements.txt
desktop/tauri/scripts/: build-backend.mjs  build-dmg.mjs  build-ui.mjs  dev-ui.mjs  prepare-python-app.mjs
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: lib.rs  main.rs
desktop/tauri/ui/: index.html  main.js  styles.css
docs/: CLIENT_DESIGN.md  MAC_RELEASE.md  WINDOWS_RELEASE.md
packaging/macos/: build_app.command  sign_and_notarize.command
