[package]
name = "find-myself-tauri"
version = "0.2.4"
description = "Native Tauri client for Find Myself"
authors = ["MXuer"]
edition = "2021"

[lib]
name = "find_myself_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
